# example_package_billy0402

./: Pipfile  README.md  dev-requirements.txt  pyproject.toml  requirements.txt
src/python_package_template/: example.py
src/python_package_template.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/typings/python_package_template/: example.pyi
